added all missing styles and transleted into russian some elements

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://TRETAKOVYURA2009.github.io/Minesweeper",
+  "homepage": "Remember_the_formula",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
