preparation to deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "Remember_the_formula",
+  "homepage": "https://gendo2009.github.io/Remember-the-formula",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
